@@ -56,7 +56,11 @@ public:
     bool OnGossipSelect(Player* player, Creature* creature, uint32 /*sender*/, uint32 actions) override
     {
         player->PlayerTalkClass->ClearMenus();
+#ifndef MANGOS
         Mercenary* mercenary = sMercenaryMgr->GetMercenaryByOwner(player->GetGUID().GetCounter());
+#else
+        Mercenary* mercenary = sMercenaryMgr->GetMercenaryByOwner(player->GetGUIDLow());
+#endif
         WorldSession* session = player->GetSession();
         if (!mercenary)
         {
@@ -305,7 +309,11 @@ public:
 
     void SendToHello(Player* player, Creature* creature)
     {
+#ifndef MANGOS
         Mercenary* mercenary = sMercenaryMgr->GetMercenaryByOwner(player->GetGUID().GetCounter());
+#else
+        Mercenary* mercenary = sMercenaryMgr->GetMercenaryByOwner(player->GetGUIDLow());
+#endif
         if (!mercenary)
             player->ADD_GOSSIP_ITEM(GOSSIP_ICON_CHAT, "I want a mercenary.", 0, 1);
         else
@@ -457,7 +465,11 @@ public:
             return false;
         }
 
+#ifndef MANGOS
         Mercenary* mercenary = sMercenaryMgr->GetMercenaryByOwner(player->GetGUID().GetCounter());
+#else
+        Mercenary* mercenary = sMercenaryMgr->GetMercenaryByOwner(player->GetGUIDLow());
+#endif
         if (!mercenary)
             return false;
 
@@ -468,7 +480,11 @@ public:
     bool OnGossipSelect(Player* player, Creature* creature, uint32 /*sender*/, uint32 actions) override
     {
         player->PlayerTalkClass->ClearMenus();
+#ifndef MANGOS
         Mercenary* mercenary = sMercenaryMgr->GetMercenaryByOwner(player->GetGUID().GetCounter());
+#else
+        Mercenary* mercenary = sMercenaryMgr->GetMercenaryByOwner(player->GetGUIDLow());
+#endif
         WorldSession* session = player->GetSession();
         if (mercenary)
         {
@@ -625,7 +641,11 @@ public:
         player->PlayerTalkClass->ClearMenus();
         if (actions == 37)
         {
+#ifndef MANGOS
             Mercenary* mercenary = sMercenaryMgr->GetMercenaryByOwner(player->GetGUID().GetCounter());
+#else
+            Mercenary* mercenary = sMercenaryMgr->GetMercenaryByOwner(player->GetGUIDLow());
+#endif
             if (!mercenary)
                 return false;
 
@@ -687,7 +707,11 @@ public:
 
     void SendToHello(Player* player, Creature* creature, Mercenary* mercenary)
     {
+#ifndef MANGOS
         if (mercenary->GetOwnerGUID() == player->GetGUID().GetCounter())
+#else
+        if (mercenary->GetOwnerGUID() == player->GetGUIDLow())
+#endif
         {
             player->ADD_GOSSIP_ITEM(GOSSIP_ICON_CHAT, "Change Gear", 0, 1);
             player->ADD_GOSSIP_ITEM(GOSSIP_ICON_CHAT, "View equipped Gear", 0, 2);
@@ -778,12 +802,16 @@ public:
             lastMessage = "";
 
 #ifndef MANGOS
-            if (Unit* owner = (Player*)me->GetOwner())
+            if (Unit* owner = me->GetOwner())
 #else
             if (Unit* owner = m_creature->GetOwner())
 #endif
             {
+#ifndef MANGOS
                 mercenary = sMercenaryMgr->GetMercenaryByOwner(owner->GetGUID().GetCounter());
+#else
+                mercenary = sMercenaryMgr->GetMercenaryByOwner(owner->GetGUIDLow());
+#endif
                 if (mercenary)
                 {
                     for (auto it = sMercenaryMgr->MercenarySpellsBegin(); it != sMercenaryMgr->MercenarySpellsEnd(); ++it)
@@ -802,7 +830,7 @@ public:
                     }
                 }
 #ifndef MANGOS
-                if (Unit* owner = (Player*)me->GetOwner())
+                if (Unit* owner = me->GetOwner())
                     me->GetMotionMaster()->MoveFollow(owner, PET_FOLLOW_DIST, me->GetFollowAngle());
 #endif
             }
@@ -890,7 +918,11 @@ public:
     bool OnGossipSelect(Player* player, Creature* creature, uint32 /*sender*/, uint32 actions) override
     {
         player->PlayerTalkClass->ClearMenus();
+#ifndef MANGOS
         Mercenary* mercenary = sMercenaryMgr->GetMercenaryByOwner(player->GetGUID().GetCounter());
+#else
+        Mercenary* mercenary = sMercenaryMgr->GetMercenaryByOwner(player->GetGUIDLow());
+#endif
         if (mercenary)
         {
 #ifdef MANGOS
